# VeriLogos-Reasoning

./: LICENSE  README.md  default_config.yaml  full_fine_tune_script_multi_gpu.py  lora_train_script_v2_multi_gpu.py  lora_train_script_v2_single_gpu.py  main.py  pyproject.toml  zero3_accum2.yaml
data/jsonl/: evaluation.jsonl
ref/: ref.fm  system.prompt
run_script/: augment.sh  evaluate.sh  finetune_verilog_completion.sh  gen_code_multi.sh  gen_code_single_batch.sh  gen_rltf_jsonl.sh  gen_sft_jsonl.sh  gen_synthetic_traces.sh  rltf.sh  run_parallel_resume_jobs.sh  sft.sh  split_resume_file.sh  validate_dirs.sh
verilogos/augmentator/: deletion.py  hdl_augmentator.py  insertion.py  modification.py
verilogos/evaluator/: hdl_evaluator.py
verilogos/generator/: hdl_generator.py  jsonl_generator.py
verilogos/reasoning/: api_client.py  finetuner.py  trace_generator.py
verilogos/trainer/: rltf.py  rltf_grpo.py  sft.py
verilogos/utils/: analyze_tokens.py  functionality.py  io.py  merge_lora.py  parser.py  status.py  syntax.py
