[project]
name = "verilogos-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "lm-deluge>=0.0.11",
    "networkx>=3.0",
    "openai>=1.79.0",
    "pandas>=2.0.0",
    "pyverilog>=1.3.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.35.0",
    "trl>=0.7.0",
    "wandb>=0.19.11",
]
